<resources>
    <string name="app_name">FoodMonkey</string>
    <string name="facebook_app_id">269240333781695</string>
    <string name="fb_login_protocol_scheme">fb269240333781695</string>
    <string name="stripePbKey">pk_test_6Y79q9xXnWtKnV0JQJa087Yl</string>
    <string name="stripeSecKey">sk_test_eGA1vmXgPmvLErBrWCIifKyG</string>
    <string name="PostalCodeAPI">BD11EZ</string>
    <string name="ok">Ok</string>
    <string name="letsTheChimp"><b>Let</b> The <b>Chimp</b> Tingle \n<b>Your</b> Taste <b>Buds..</b></string>
    <string name="splash_three_text">Let The Chimp Tingle\n Your Taste Buds</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="login">Login</string>
    <string name="loginWith">OR LOGIN WITH</string>
    <string name="facebook">Facebook</string>
    <string name="facebookIcon">&#xf09a;</string>
    <string name="googleIcon">&#xf1a0;</string>
    <string name="google">Google</string>
    <string name="dontHaveAccount">DO NOT HAVE AN ACCOUNT? SIGN UP</string>
    <string name="thumbLogin">Thumb Login</string>
    <string name="faceRecognition">Facial Recognition</string>
    <string name="forgetPasswordText">Enter your email and we will send a link to\n recover your account</string>
    <string name="emailAddress">Email Address</string>
    <string name="yourEmailPassword">Your Email Address</string>
    <string name="setPassword">Set Password</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="readAcceptTermsAndConditions">I\'ve read and accept Terms and conditions</string>
    <string name="createAccount">Create Account</string>
    <string name="haveAnAccount">HAVE AN ACCOUNT? LOGIN</string>
    <string name="signUp">Signup</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="foodMonkey">Food Monkey</string>
    <string name="myAccount">My Account</string>
    <string name="signOut">Signout</string>
    <string name="referFriend">Refer a friend</string>
    <string name="myOrders">My Orders</string>
    <string name="help">Help</string>
    <string name="terms">Terms</string>
    <string name="settings">Settings</string>
    <string name="restaurant">Restaurant</string>
    <string name="seeMore">See More</string>
    <string name="takeOut">Take Out Menu</string>
    <string name="yourOrders">Your Orders</string>
    <string name="sponsored">Sponsored</string>
    <string name="closedRestaurents">Closed Restaurants</string>
    <string name="delivery">Delivery</string>
    <string name="collections">Collections</string>
    <string name="deliveryCollections">Delivery + Collections</string>
    <string name="bestMatch">Best match</string>
    <string name="distance">Distance</string>
    <string name="newRadio">New</string>
    <string name="avgRating">Avg.rating</string>
    <string name="a_zRadio">A-Z</string>
    <string name="reviews">Reviews</string>
    <string name="info">Info</string>
    <string name="menu">Menu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="dummyText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</string>
    <string name="readMore">Read more</string>
    <string name="openningHour">Opening hours</string>
    <string name="deliveryAreas">Delivery areas</string>
    <string name="cancel">Cancel</string>
    <string name="selectQuantity">Select Quantity</string>
    <string name="yourOrder">Your Order</string>
    <string name="cartSummary">Cart Summary</string>
    <string name="editOrder">Edit Order</string>
    <string name="subTotal">Subtotal</string>
    <string name="deliveryFee">Delivery Fee</string>
    <string name="total">Total</string>
    <string name="paymentAfterLogin">You wil be able to review delivery address and payment\n option after login.</string>
    <string name="checkOut">Checkout</string>
    <string name="editCart">Edit Cart</string>
    <string name="firstName">First name</string>
    <string name="middleName">Middle name</string>
    <string name="surName">Surname</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="mobile">Mobile</string>
    <string name="dob">Date of birth</string>
    <string name="yyyy">yyyy</string>
    <string name="mm">mm</string>
    <string name="chooseDeliveryType">Choose delivery type</string>
    <string name="addNewAddress">Add new address</string>
    <string name="proceedToPay">Proceed to Pay</string>
    <string name="network_error">No Internet Connection</string>
    <string name="serverError">Server Error</string>
    <string name="dd">dd</string>
    <string name="pleaseEnterFirstName">Please enter first name</string>
    <string name="pleaseEnterMiddleName">Please enter middle name</string>
    <string name="pleaseEnterSurName">Please enter sur name</string>
    <string name="pleaseEnterEmail">Please enter email address</string>
    <string name="pleaseEnterMobile">Please enter mobile number</string>
    <string name="pleaseSelectDateOfBirth">Please select date of birth</string>
    <string name="pleaseEnterPassword">Please enter password</string>
    <string name="somethingWentWrong">Something went please try again.</string>
    <string name="customerType">Customer</string>
    <string name="callingChannel">App</string>
    <string name="tryAgain">Try Again</string>
    <string name="addToCartPlus">Add to Cart +</string>
    <string name="wouldYouLikeToPay">How would you like to pay?</string>
    <string name="securityNumber">Security number</string>
    <string name="cvvText">The 3 digit number on the back of your card</string>
    <string name="payViaPaypal">Pay Via PayPal</string>
    <string name="payCashOnDeliv">Pay Cash on Delivery</string>
    <string name="placeMyOrder">Place My Order</string>
    <string name="addNewCard">Add New Credit/Debit Card</string>
    <string name="completeYourPayment">Complete Your Payment</string>
    <string name="nameOnCard">Name on Card</string>
    <string name="enterName">Enter Name</string>
    <string name="cardNumber">Card Number</string>
    <string name="cardFormat">0000-0000-0000-0000</string>
    <string name="expirationDate">Expiration Date</string>
    <string name="cvv">CVV</string>
    <string name="addNewCreditAndDebitCard">Add New Credit/Debit Card</string>
    <string name="addCard">Add Card</string>
    <string name="leaveFeedForChance">Leave feed for a chance to win</string>
    <string name="restaurantTakingPreOrder">restaurants taking pre-orders for later</string>
    <string name="collections_delivery">Collections_Delivery</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="logIn">Log In</string>
    <string name="Signup">Sign Up</string>
    <string name="copyReferalCode">Copy referal code</string>
    <string name="helpReferalText">Share this code with your friends. when they order\n delivery or pick up for the first time they\'ll get 15% off.\nThen you will too!</string>
    <string name="enterMobileNumber">Enter Mobile Number</string>
    <string name="send">Send</string>
    <string name="twitter">Twitter</string>
    <string name="more">More...</string>
    <string name="versionNo">Version: 2.6.2</string>
    <string name="servicePermissions">Service Permissions</string>
    <string name="appPermission">App permissions</string>
    <string name="contactsPhoneEtc">Contacts, Locations, Phone, SMS</string>
    <string name="notification">Notifications</string>
    <string name="showOnLockScreen">Show on Lock Screen</string>
    <string name="startInBackground">Start in background</string>
    <string name="displayPopUpWindow">Display pop-up window</string>
    <string name="deliverAddress">Delivery details</string>
    <string name="houseNumber">House Number</string>
    <string name="streetLine1">Street Line 1</string>
    <string name="streetLine2">Street Line 2</string>
    <string name="postCode">Post Code</string>
    <string name="city">City</string>
    <string name="goToPayment">Go to Payment</string>
    <string name="pleaseEnterHouseNumber">Please enter house number</string>
    <string name="pleaseEnterStreetLine">Please enter street line 1</string>
    <string name="pleaseEnterStreetLine2">Please enter street line 2</string>
    <string name="pleaseEnterPostCode">Please enter post code</string>
    <string name="pleaseEnterCity">Please enter city</string>
    <string name="addressNote">Address Note</string>
    <string name="selectAddressType">Please select Address Type</string>
    <string name="home">Home</string>
    <string name="office">office</string>
    <string name="pleaseSelectAddressType">Please select Address Type</string>
    <string name="pleaseSelectAddressNote">Please select Address Note</string>
    <string name="addItems">Add Items</string>
    <string name="done">Done</string>
    <string name="addAddress">Add Address</string>
    <string name="pleaseEnterCardName">Please enter card name</string>
    <string name="pleaseEnterValidCardNumber">Please enter valid card number</string>
    <string name="pleaseEnterCVV">Please enter CVV number</string>
    <string name="pleaseEnterSelectedMonth">Please select card expiry month</string>
    <string name="pleaseEnterSelectedYear">Please select card expiry year</string>
    <string name="personalAccountDetail">Personal Account Detail</string>
    <string name="fingerPrint">Fingerprint</string>
    <string name="facialRecognition">Facial Recognition</string>
    <string name="changePassword">Change Password</string>
    <string name="feedback">FeedBack</string>
    <string name="logOut">Logout</string>
    <string name="changePhoto">Change Photo</string>
    <string name="save">Save</string>
    <string name="manageAddress">Manage Address</string>
    <string name="editAccount">Edit Account</string>
    <string name="gender">Gender</string>
    <string name="dateOfBirth">Date of birth</string>
    <string name="business">Business</string>
    <string name="tapAStarToRate">Tap a Star to Rate</string>
    <string name="title">Title</string>
    <string name="reviewOptional">Review (Optional)</string>
    <string name="postFeedBack">Post Feedback</string>
    <string name="pleaseEnterTitle">Please enter Title</string>
    <string name="pleaseGiveSomeRate">Please give some rating</string>
    <string name="whereToFindUs">Where to find us</string>
    <string name="orderIsConfirmed">Your Order is confirmed and currently preparing</string>
    <string name="orderIsOnTheWay">Your order is on the way</string>
    <string name="orderIsOnDelivered">Your order is delivered</string>
    <string name="thanksForOrder">Thanks for your order!</string>
    <string name="mobileOrEmail">Mobile or Email</string>
    <string name="skip">SKIP</string>
    <string name="locationOrPostalCode">Enter a location or enable your location</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="onlineSupport">Online support</string>
    <string name="cookiesPolicy">Cookies Policy</string>
    <string name="acknowledgement">Acknowledgements</string>
    <string name="eula">EULA</string>
    <string name="deleteAppData">Delete app data</string>
</resources>