<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context="com.kartik.project.foodmonkey.LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/marginLeft"
        android:layout_marginTop="30dp">

        <CustomControls.EditTextLatoRegular
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/curve_border_background"
            android:hint="@string/email"
            android:inputType="text"
            android:paddingStart="@dimen/padding"
            android:textColor="@android:color/black" />

        <CustomControls.EditTextLatoRegular
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/email"
            android:layout_marginTop="@dimen/marginTop"
            android:inputType="textPassword"
            android:background="@drawable/curve_border_background"
            android:drawableRight="@drawable/show_password"
            android:hint="@string/password"
            android:paddingEnd="@dimen/padding"
            android:paddingStart="@dimen/padding"
            android:textColor="@android:color/black"
            app:passwordToggleEnabled="true" />

        <CustomControls.TextViewRawLineRegular
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:gravity="right"
            android:text="@string/forgotPassword"
            android:textColor="@color/pink" />

        <CustomControls.ButtonLatoRegular
            android:id="@+id/loginButton"
            style="@style/Base.V7.Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgotPassword"
            android:layout_marginTop="@dimen/marginTop"
            android:background="@color/pink"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <CustomControls.TextViewRawLineRegular
            android:id="@+id/orLoginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginButton"
            android:layout_marginTop="@dimen/largeMarginTop"
            android:gravity="center"
            android:text="@string/loginWith"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:id="@+id/socailMediaLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/orLoginText"
            android:layout_marginTop="@dimen/marginTop"
            android:orientation="horizontal"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="0.5"
                android:background="#2d4a96"
                android:orientation="horizontal">

                <CustomControls.TextViewIconStyle
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/facebookIcon"
                    android:textColor="@android:color/white"
                    android:textSize="25dp" />

                <CustomControls.TextViewRawLineRegular
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/facebook"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/smallTitleText" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.5"
                android:background="#dd4b39"
                android:orientation="horizontal">

                <CustomControls.TextViewIconStyle
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/googleIcon"
                    android:textColor="@android:color/white"
                    android:textSize="25dp" />

                <CustomControls.TextViewRawLineRegular
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/google"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/smallTitleText" />


            </RelativeLayout>


        </LinearLayout>

        <CustomControls.TextViewRawLineBold
            android:id="@+id/signUpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/socailMediaLayout"
            android:layout_marginTop="@dimen/largeMarginTop"
            android:gravity="center"
            android:text="@string/dontHaveAccount" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/signUpText"
            android:layout_marginLeft="@dimen/largeMarginLeft"
            android:layout_marginRight="@dimen/largeMarginLeft"
            android:layout_marginTop="@dimen/largeMarginTop"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/thumbmark" />

                <CustomControls.TextViewRawLineRegular
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/padding"
                    android:text="@string/thumbLogin"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/smallText" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/underline" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin"
                android:layout_weight="0.5"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/face_login" />

                <CustomControls.TextViewRawLineRegular
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/padding"
                    android:text="@string/faceRecognition"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/smallText" />

            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>
