<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background_image"
    android:layout_height="match_parent"
    tools:context="com.kartik.project.foodmonkey.ForgetPasswordActvity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="@dimen/largeMargin"
        android:layout_marginRight="@dimen/largeMargin"
        android:layout_marginTop="30dp">

        <CustomControls.TextViewRawLineRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgetPasswordText"
            android:textSize="@dimen/mediumText"
            android:id="@+id/forgetText"/>

        <CustomControls.EditTextLatoRegular
            android:layout_below="@+id/forgetText"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/largeMarginTop"
            android:background="@drawable/curve_border_background"
            android:hint="@string/emailAddress"
            android:inputType="text"
            android:paddingStart="@dimen/padding"
            android:textColor="@android:color/black" />

        <CustomControls.ButtonLatoRegular
            android:id="@+id/submitButton"
            style="@style/Base.V7.Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_marginTop="@dimen/marginTop"
            android:background="@color/pink"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</RelativeLayout>
